# advanced_Calculator_Desktop_Version_rurst

./: DEVELOPMENT_GUIDE_CN.md  DEVELOPMENT_GUIDE_EN.md  LICENSE.txt  README.md  build-linux.js  build-mac.js  build-win.js  build-windows.bat  build.js  create-portable.bat  index.html  move_and_rename_releases.bat  package.json  tsconfig.json  upload-release.bat  vite.config.ts
releases/: AdvancedCalculator_1.0.0_x64_zh-CN.msi
src/: App.css  App.tsx  main.tsx  tauri-api.ts  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: main.wxs
